<resources>
    <string name="app_name">PassDPass</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    //<!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">344510559833582</string>
    <string name="facebook_login_protocol_scheme" translatable="false">344510559833582</string>
    <string name="loading">"Loading…"</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="disconnect">Disconnect</string>
    <string name="have_account">SIGN IN HERE\n \n Or Sign Up below:"</string>
    <string name="sign_up">Sign Up New User</string>
    <string name="hitnt_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="other_logins">Other logins</string>
    <string name="or_use_these">Or use one of these…</string>
    <string name="welcome_ua">Welcome</string>
    <string name="network_name">Network Name</string>
    <string name="password">Password</string>

    <string name="ssid">SSID</string>
    <string name="add_and_connect">Add and Connect</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="scann_for_network">Scann for network</string>
    <string name="logout">Logout</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="or_connect_to_one_these">or Connect to one these</string>
    <string name="my_saved_networks">My Saved Wifis</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="share_other">Share via other apps</string>
    <string name="update_and_connect">Update and/or Connect</string>
    <string name="delete_wifi">Delete Wifi</string>
    <string name="add_all_wifis_to_phone">Add all Wifis from DataBase to Phone</string>
    <string name="wifis_on_phone">Wifis On Phone</string>
    <string name="long_click_to_save_and_send_qr_code_image">long click to save and send QR Code image</string>

</resources>
