<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectShareList">

    <TextView
        android:id="@+id/welcome_ua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:text="@string/welcome_ua"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/emailID_UA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailID_UA"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/welcome_ua"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="-dummy-mail-address-" />

    <EditText
        android:id="@+id/edTxtSSID_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/network_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailID_UA" />

    <EditText
        android:id="@+id/edTxtPassword_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contextClickable="false"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="textVisiblePassword|textPassword"
        android:hint="Enter Password"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtSSID_list" />

    <TextView
        android:id="@+id/txtVSSID_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ssid"
        app:layout_constraintBaseline_toBaselineOf="@+id/edTxtSSID_list"
        app:layout_constraintEnd_toStartOf="@+id/edTxtSSID_list"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVPassword_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/edTxtPassword_list"
        app:layout_constraintEnd_toStartOf="@+id/edTxtPassword_list"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_and_connect_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_and_connect"
        app:layout_constraintEnd_toStartOf="@+id/btnGenerateQR_list"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPassword_list" />

    <Button
        android:id="@+id/btnGenerateQR_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/generate_qr_code"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_and_connect_list"
        app:layout_constraintEnd_toStartOf="@+id/btnShare_MN"
        app:layout_constraintStart_toEndOf="@+id/add_and_connect_list" />

    <Button
        android:id="@+id/btnShare_MN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/share_other"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnGenerateQR_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/btnGenerateQR_list" />

    <ImageView
        android:id="@+id/QR_Image_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_and_connect_list" />






</androidx.constraintlayout.widget.ConstraintLayout>