<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyNetwork">

    <TextView
        android:id="@+id/welcome_ua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:text="@string/welcome_ua"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/emailID_UA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailID_UA"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/welcome_ua"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="-dummy-mail-address-" />


    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="78dp"
        android:layout_height="35dp"
        android:layout_margin="4dp"
        android:layout_marginEnd="4dp"
        android:text="Logout"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/edTxtSSID_MN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/network_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailID_UA" />

    <EditText
        android:id="@+id/edTxtPassword_MN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contextClickable="false"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="textVisiblePassword|textPassword"
        android:text="@string/password"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtSSID_MN" />

    <TextView
        android:id="@+id/txtVSSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ssid"
        app:layout_constraintBaseline_toBaselineOf="@+id/edTxtSSID_MN"
        app:layout_constraintEnd_toStartOf="@+id/edTxtSSID_MN"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/edTxtPassword_MN"
        app:layout_constraintEnd_toStartOf="@+id/edTxtPassword_MN"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/update_and_connect_MN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/update_and_connect"
        app:layout_constraintEnd_toStartOf="@+id/btnShare_MN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPassword_MN" />

    <Button
        android:id="@+id/btnShare_MN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/share_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update_and_connect_MN"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPassword_MN" />


    <ImageView
        android:id="@+id/QR_Image_MN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Delete Network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGenerateQR_MN"
        app:layout_constraintTop_toBottomOf="@+id/update_and_connect_MN" />

    <Button
        android:id="@+id/btnGenerateQR_MN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/generate_qr_code"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_and_connect_MN" />


</androidx.constraintlayout.widget.ConstraintLayout>